--- a/www/index.html
+++ b/www/index.html
@@ -2,15 +2,32 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <var>port</var>
     <meta charset="utf-8" />
-    <title>titre java script-</title>
+    <title>titre</title>
+    <script type="text/javascript" src="js/echo.js"></script> <!--associer le JS a la page index.html-->
 </head>
+
+<var>
+    port
+</var>
+
+<div>
+    <label>Message à envoyer : </label>
+    <input type="text" id="messageEnvoi">
+    <input type="button" id="Envoyer" value="Envoyer"> <!--creation d'un bouton-->
+</div>
+
+<div>
+    <label>Message reçu : </label>
+    <input type="text" id="messageRecu" readonly> <!--creation d'un 'input-->
+</div>
+
+
 <body>
-    <header>
-        titre header
-    </header>
-    <section></section>
-    <footer></footer>
+
+
+
 </body>
+
+
 </html>
